--- a/client/public/index.html
+++ b/client/public/index.html
@@ -2,13 +2,24 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="수십명이 즐기는 네트워크 릴레이 가위바위보 난투"
     />
+    <meta name="keywords" content="가위바위보,웹게임,캐주얼파티" />
+    <meta name="og:site_name" content="RPS Brawl" />
+    <meta name="og:title" content="RPS Brawl" />
+    <meta
+      name="og:description"
+      content="수십명이서 네트워크 가위바위보 난투를 즐겨보세요😁"
+    />
+    <meta name="og:type" content="game" />
+    <meta name="og:url" content="http://www.rps_brawl.com" />
+    <meta name="og:image" content="%PUBLIC_URL%/thumb_nail.png" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -25,6 +36,10 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>RPS Brawl</title>
+    <script
+      defer
+      src="https://cdn.swygbro.com/public/widget/swyg-widget.js"
+    ></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
