feat: update SEO

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -4,12 +4,14 @@
     <meta charset="utf-8" />
 
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="shortcut icon" href="%PUBLIC_URL%/logo192.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
       content="수십명이 즐기는 네트워크 릴레이 가위바위보 난투"
     />
+
     <meta name="keywords" content="가위바위보,웹게임,캐주얼파티" />
     <meta name="og:site_name" content="RPS Brawl" />
     <meta name="og:title" content="RPS Brawl" />
@@ -19,7 +21,8 @@
     />
     <meta name="og:type" content="game" />
     <meta name="og:url" content="http://www.rps_brawl.com" />
-    <meta name="og:image" content="%PUBLIC_URL%/thumb_nail.png" />
+    <meta name="og:image" content="%PUBLIC_URL%/RPS Brawl_logo_animated.gif" />
+    <meta name="og:image:type" content="image/gif" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
