--- a/client/public/index.html
+++ b/client/public/index.html
@@ -9,18 +9,18 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="수십명이 즐기는 네트워크 릴레이 가위바위보 난투"
+      content="수십 명이 동시에 즐기는 네트워크 가위바위보 난투"
     />
 
-    <meta name="keywords" content="가위바위보,웹게임,캐주얼파티" />
+    <meta name="keywords" content="가위바위보,웹게임,캐주얼게임,파티게임" />
     <meta name="og:site_name" content="RPS Brawl" />
     <meta name="og:title" content="RPS Brawl" />
     <meta
       name="og:description"
-      content="수십명이서 네트워크 가위바위보 난투를 즐겨보세요😁"
+      content="수십 명이서 네트워크 가위바위보 난투를 즐겨보세요😁"
     />
     <meta name="og:type" content="game" />
-    <meta name="og:url" content="http://www.rps_brawl.com" />
+    <meta name="og:url" content="https://rps-brawl.swygbro.com" />
     <meta name="og:image" content="%PUBLIC_URL%/RPS Brawl_logo_animated.gif" />
     <meta name="og:image:type" content="image/gif" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
