--- a/client/public/index.html
+++ b/client/public/index.html
@@ -6,10 +6,10 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <link rel="shortcut icon" href="%PUBLIC_URL%/logo192.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#564BA2" />
     <meta
       name="description"
-      content="수십 명이 동시에 즐기는 네트워크 가위바위보 난투"
+      content="수십 명이 동시에 즐기는 네트워크 가위바위보 난투 / A network rock-paper-scissors game enjoyed by dozens of people simultaneously"
     />
 
     <meta name="keywords" content="가위바위보,웹게임,캐주얼게임,파티게임" />
@@ -17,10 +17,10 @@
     <meta name="og:title" content="RPS Brawl" />
     <meta
       name="og:description"
-      content="수십 명이서 네트워크 가위바위보 난투를 즐겨보세요😁"
+      content="수십 명이서 네트워크 가위바위보 난투를 즐겨보세요😁 / Enjoy a network rock-paper-scissors game with dozens of people😁"
     />
     <meta name="og:type" content="game" />
-    <meta name="og:url" content="https://rps-brawl.swygbro.com" />
+    <meta name="og:url" content="https://rpsbrawl.swygbro.com" />
     <meta name="og:image" content="%PUBLIC_URL%/RPS Brawl_logo_animated.gif" />
     <meta name="og:image:type" content="image/gif" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
