revert SEO in deployed version

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -20,7 +20,7 @@
       content="수십 명이서 네트워크 가위바위보 난투를 즐겨보세요😁 / Enjoy a network rock-paper-scissors game with dozens of people😁"
     />
     <meta name="og:type" content="game" />
-    <meta name="og:url" content="https://rpsbrawl.swygbro.com" />
+    <meta name="og:url" content="https://rpsbrawl.dantae.net" />
     <meta name="og:image" content="%PUBLIC_URL%/RPS Brawl_logo_animated.gif" />
     <meta name="og:image:type" content="image/gif" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
@@ -39,10 +39,6 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>RPS Brawl</title>
-    <script
-      defer
-      src="https://cdn.swygbro.com/public/widget/swyg-widget.js"
-    ></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
